# StarTopologyEmulatorGUI

./: .gitmodules  Build.bat  CMakeLists.txt  LICENSE  README.md  main.cpp
src/AdvancedDockingSystem/: CMakeLists.txt
src/AdvancedDockingSystem/include/ads/: API.h  ContainerWidget.h  DropOverlay.h  FloatingWidget.h  Internal.h  SectionContent.h  SectionContentWidget.h  SectionTitleWidget.h  SectionWidget.h
src/AdvancedDockingSystem/src/: API.cpp  ContainerWidget.cpp  DropOverlay.cpp  FloatingWidget.cpp  Internal.cpp  SectionContent.cpp  SectionContentWidget.cpp  SectionTitleWidget.cpp  SectionWidget.cpp
src/Context/: CMakeLists.txt
src/Context/src/: Context.h  IContext.h  Info.cpp  Info.h  ModuleWidget.h
src/EditorWidget/: CMakeLists.txt
src/EditorWidget/src/: EditorWidget.cpp  EditorWidget.h
src/EmulatorConfigWidget/: CMakeLists.txt
src/EmulatorConfigWidget/src/: CollapsibleSection.cpp  CollapsibleSection.h  CommonStrategyConfigWidget.cpp  CommonStrategyConfigWidget.h  EmaIncomeLoadEstimatorConfigWidget.cpp  EmaIncomeLoadEstimatorConfigWidget.h  EmulatorConfigWidget.cpp  EmulatorConfigWidget.h  EmulatorLogWidget.cpp  EmulatorLogWidget.h  EmulatorParamsWidget.cpp  EmulatorParamsWidget.h  FrameConfigWidget.cpp  FrameConfigWidget.h  HubStrategySelectionWidget.cpp  HubStrategySelectionWidget.h  IncomeLoadEstimatorSelectionWidget.cpp  IncomeLoadEstimatorSelectionWidget.h  KalmanIncomeLoadEstimatorConfigWidget.cpp  KalmanIncomeLoadEstimatorConfigWidget.h  SimpleStrategyConfigWidget.cpp  SimpleStrategyConfigWidget.h
src/EmulatorConfigWidget/src/Benchmark/: BenchExecutor.cpp  BenchExecutor.h  BenchImplDialog.cpp  BenchImplDialog.h  BenchJson.cpp  BenchJson.h  BenchPlan.cpp  BenchPlan.h  BenchRunner.cpp  BenchRunner.h  BenchTypes.cpp  BenchTypes.h  BenchmarkWidget.cpp  BenchmarkWidget.h  ParamRegistry.cpp  ParamRegistry.h  SweepSpinBox.cpp  SweepSpinBox.h
src/EmulatorConfigWidget/src/FtpGeneratorConfigs/: BacklogFeedbackFtpGeneratorConfigWidget.cpp  BacklogFeedbackFtpGeneratorConfigWidget.h  LyapunovFtpGeneratorConfigWidget.cpp  LyapunovFtpGeneratorConfigWidget.h  MarginalUtilityFtpGeneratorConfigWidget.cpp  MarginalUtilityFtpGeneratorConfigWidget.h  ServiceDelayFtpGeneratorConfigWidget.cpp  ServiceDelayFtpGeneratorConfigWidget.h  StaticFtpGeneratorConfigWidget.cpp  StaticFtpGeneratorConfigWidget.h
src/EmulatorConfigWidget/src/IncomeLoadControllerConfigs/: AlphaFairIncomeLoadConfigWidget.cpp  AlphaFairIncomeLoadConfigWidget.h  CollisionBudgetIncomeLoadConfigWidget.cpp  CollisionBudgetIncomeLoadConfigWidget.h  EnergyAwareIncomeLoadConfigWidget.cpp  EnergyAwareIncomeLoadConfigWidget.h  GreyModelAdaptiveBackoffConfigWidget.cpp  GreyModelAdaptiveBackoffConfigWidget.h  LogBarrierIncomeLoadConfigWidget.cpp  LogBarrierIncomeLoadConfigWidget.h  PiAntiWindupConfigWidget.cpp  PiAntiWindupConfigWidget.h  PiIncomeLoadConfigWidget.cpp  PiIncomeLoadConfigWidget.h  PseudoBayesianIncomeLoadConfigWidget.cpp  PseudoBayesianIncomeLoadConfigWidget.h  RiskSensitiveIncomeLoadConfigWidget.cpp  RiskSensitiveIncomeLoadConfigWidget.h  SimpleUtilityBasedIncomeLoadConfigWidget.cpp  SimpleUtilityBasedIncomeLoadConfigWidget.h  StaticIncomeLoadConfigWidget.cpp  StaticIncomeLoadConfigWidget.h
src/EmulatorConfigWidget/src/IncomeStationsPredictorConfigs/: GreyModelConfigWidget.cpp  GreyModelConfigWidget.h  LinearRegressionConfigWidget.cpp  LinearRegressionConfigWidget.h
src/EmulatorConfigWidget/src/Scenario/: ScenarioBuilderWidget.cpp  ScenarioBuilderWidget.h  ScenarioEventData.h  ScenarioEventDialog.cpp  ScenarioEventDialog.h  ScenarioJson.cpp  ScenarioJson.h
src/GraphWidget/: CMakeLists.txt
src/GraphWidget/src/: CustomPlot.cpp  CustomPlot.h  GraphWidget.cpp  GraphWidget.h  MetricPlotter.cpp  MetricPlotter.h  qcustomplot.cpp  qcustomplot_mod.h
